<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="address_caption">地址</string>
    <string name="alt_check">Alt键</string>
    <string name="app_name">TAKEASY移动教学系统</string>
    <string name="arrow_down">下箭头键</string>
    <string name="arrow_left">左箭头键</string>
    <string name="arrow_right">右箭头键</string>
    <string name="arrow_up">上箭头键</string>
    <string name="auto">自动</string>
    <string name="button_send_text">发送信息</string>
    <string name="button_send_without_saving">发送信息/不作保存</string>
    <string name="center_mouse">鼠标 @</string>
    <string name="close">关闭</string>
    <string name="color_format_caption">颜色样式</string>
    <string name="color_mode">颜色风格</string>
    <string name="connect_button">连接</string>
    <string name="connection_caption">连接</string>
    <string name="control_check">Ctrl</string>
    <string name="copy_list_button">拷贝列表</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="delete_connection">删除连接</string>
    <string name="delete_key">删除</string>
    <string name="delete_key_list">删除列表</string>
    <string name="disconnect">断开</string>
    <string name="export_settings">导出</string>
    <string name="export_settings_path">导出到文件</string>
    <string name="enter_text_title">输入文本并发送</string>
    <string name="enter_text">发送文本</string>
    <string name="fit_to_screen">适合屏幕</string>
    <string name="force_full_check">全屏显示</string>
    <string name="import_export_settings">导入/导出 设置</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_file_url">通过文件或URL导入</string>
    <string name="info">信息</string>
    <string name="intro_text">如果你需要帮助请点击 &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/Documentation">manual&lt;/a> (点击手机 Menu键进入操作指南和其他选择项), or the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/faq">FAQ&lt;/a>.&lt;br></string>
    <string name="intro_title">欢迎</string>
    <string name="intro_version_text">&lt;br>--通过远程连接信息记住所发信息(随意的)&lt;br>--将配置导入/导出到文件&lt;br>--通过键盘控制图片缩放&lt;br>--能够强制一种窗口模式 (非常大的屏幕)</string>
    <string name="input_mode">输入模式</string>
    <string name="input_mode_fit_to_screen">不滚动; 轨迹球鼠标</string>
    <string name="input_mode_mouse">鼠标指针控制模式</string>
    <string name="input_mode_panning">桌面滚动模式</string>
    <string name="input_mode_touchpad_pan_trackball_mouse">触控屏幕，控制鼠标</string>
    <string name="input_mode_dpad_pan_touchpad_mouse">触摸鼠标; 缓慢移动</string>
    <string name="input_mode_touch_pan_zoom_mouse">正在通讯连接...</string>
    <string name="input_mode_touchpad">触摸板</string>
    <string name="keep_password_button">保存</string>
    <string name="intro_dont_show">不再显示</string>
    <string name="keys_caption">键</string>
    <string name="list_caption">列表</string>
    <string name="list_name_caption">列表名字</string>
    <string name="local_mouse_check">本地鼠标指针</string>
    <string name="meta_key_title">发送特殊键</string>
    <string name="mouse_follow_pan">鼠标跟着触摸滚动</string>
    <string name="new_list_button">新列表</string>
    <string name="nickname_caption">昵称</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="one_to_one">1:1</string>
    <string name="open_doc">指南/维基百科</string>
    <string name="pan_follow_mouse">跟随鼠标滚动</string>
    <string name="password_caption">密码</string>
    <string name="port_caption">端口</string>
    <string name="repeater_button">转发器</string>
    <string name="repeater_caption">输入转发器地址 &lt;b>只要&lt;/b> 你是正在使用一个&lt;br>&lt;i>UltraVNC&lt;/i>-类型转发器</string>
    <string name="repeater_clear">不使用转发器</string>
    <string name="repeater_dialog_title">转发器信息</string>
    <string name="repeater_empty_text">没有转发器</string>
    <string name="repeater_save">使用这个转发器地址</string>
    <string name="save_as_copy">保存复制</string>
    <string name="scaling">缩放</string>
    <string name="scaling_zoomable">急速上升</string>
    <!-- Send selected metakey -->
    <string name="send_button">发送</string>
    <string name="send_key_again">再次发送</string>
    <string name="shift_check">Shift键</string>
    <string name="shortcut_label">TAKEASY移动教学系统 连接</string>
    <string name="showkbd_label">键盘</string>
    <string name="special_keys">发送键</string>
    <string name="username_caption">用户名</string>
    <string name="username_hint">Windows验证</string>
    <!-- guoqing自定义文本文件 -->
    <string name="btn_cancle">取消</string>
    <string name="btn_add">添加</string>
    <string name="btn_delete">删除</string>
    <string name="btn_connect">连接</string>
    <string name="btn_submit">提交</string>
    <string name="btn_update">修改</string>
    <string name="txt_username">用户名</string>
    <string name="txt_password">密码</string>
    <string name="txt_address">地址</string>
    <string name="txt_port">端口</string>
    <string name="txt_connect">连接</string>
    <string name="txt_keep">保存</string>
    <string name="default_connection">设置成默认连接</string>
    <string name="system_out">是否退出系统？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="jianpang">键盘</string>
    <string name="tuichu">退出</string>
    <string name="zishiying">自适应</string>
    <string name="suoping">锁屏</string>
    <string name="fangda">放大</string>
    <string name="suoxiao">缩小</string>
    <string name="drawing">白板</string>
    <string name="selectcolor_done">Done</string>
	<string name="selectcolor_cancel">Cancel</string>
	<string name="selectpicture_nopictures">There is no pictures in SDCard</string>
	<string name="sketchpadtool_clear">Clear</string>
	<string name="selectpicture_tip">Please wait while finding media...</string>
	<string name="selectpicture_done">Done</string>
	<string name="selectpicture_cancel">Cancel</string>
	<string name="selectpicture_nosdcard">There is no SDCard</string>
</resources>