
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:numericShortcut="10" android:alphabeticShortcut="p" android:id="@+id/huaban" android:title="白板" android:icon="@drawable/qiehuan"/>
    <item android:numericShortcut="1" android:alphabeticShortcut="s" android:id="@+id/jianp" android:title="@string/jianpang" android:icon="@drawable/menu01" />
     <item android:numericShortcut="8" android:alphabeticShortcut="a" android:id="@+id/fangd" android:title="@string/fangda" android:icon="@drawable/fd"/>
    <item android:numericShortcut="9" android:alphabeticShortcut="i" android:id="@+id/suox" android:title="@string/suoxiao" android:icon="@drawable/sx"/> 
    <item android:numericShortcut="2" android:alphabeticShortcut="m" android:id="@+id/tuic" android:title="@string/tuichu" android:icon="@drawable/close"/>
    <item  android:alphabeticShortcut="e" android:title="@string/zishiying" android:icon="@drawable/menu03" android:id="@+id/itemFitToScreen"/>
    <item android:numericShortcut="5" android:alphabeticShortcut="p" android:id="@+id/suop" android:title="@string/suoping" android:icon="@drawable/menu04"/>
      
    
    </menu>