<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_ui_color1"
    android:orientation="vertical" >
   <include layout="@layout/title_layout" />
     <!--    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg" >
    <TextView
            android:id="@+id/main_ui_titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="25sp" android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:text="设置" /> 
    </RelativeLayout>-->

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginRight="20dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="vertical"
        android:weightSum="25" >
<!--  
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv1"
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20px"
                android:text="@string/txt_connect"
                android:textColor="@color/black"
                android:textSize="24px" />

            <TextView
                android:id="@+id/inter_ui_textview"
                android:layout_width="fill_parent" android:textSize="25sp" android:textColor="@color/black"
               android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv2"
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20px"
                android:text="@string/txt_username"
                android:textColor="@color/black"
                android:textSize="24px" />

            <EditText
                android:id="@+id/inter_ui_name"
                android:layout_width="fill_parent"
                android:singleLine="true"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>
-->

		<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20px"
                android:text="@string/txt_address"
                android:textColor="@color/black"
                android:textSize="24px" />

            <EditText
                android:singleLine="true"
                android:id="@+id/inter_ui_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20px"
                android:text="@string/txt_password"
                android:textColor="@color/black"
                android:textSize="24px" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:singleLine="true"
                    android:id="@+id/inter_ui_password"
                    android:layout_width="300px"
                    android:layout_height="wrap_content"
                    android:password="true" >
                </EditText>

                <CheckBox
                    android:id="@+id/checkboxKeepPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_keep"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20px"
                android:text="@string/txt_port"
                android:textColor="@color/black"
                android:textSize="24px" />

            <EditText
                android:singleLine="true"
                android:id="@+id/inter_ui_port"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20px"
                android:text="分辨率"
                android:textColor="@color/black"
                android:textSize="24px" />

            <Spinner 
			    android:id="@+id/colorformat" 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="20dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10px"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:orientation="horizontal" >
            </LinearLayout>

            <Button
                android:id="@+id/submit_inter"
                android:layout_width="80dip"
                android:layout_height="60dip"
                android:text="@string/btn_submit" />

            <Button
                android:id="@+id/submit_cancle"   android:layout_width="80dip"
                android:layout_height="60dip"
                android:text="@string/btn_cancle" />
            <CheckBox
                    android:id="@+id/checkboxconnection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_connection"
                    android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>